# vk-renderer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
external_inc/: vk_mem_alloc.h
inc/: shadersource.hpp  vkcamera.hpp  vkcompute.hpp  vkcore.hpp  vkdds.hpp  vkdescriptor.hpp  vkmemory.hpp  vkmodel.hpp  vkpresent.hpp  vkrender.hpp  vkshader.hpp  vktexture.hpp  vkutils.hpp
shaders/: deferred.comp  deferred.comp.spv  deferred.frag  deferred.frag.spv  deferred.vert  deferred.vert.spv  gen_spv.bat  gen_spv.ps1  offscreen.frag  offscreen.frag.spv  offscreen.vert  offscreen.vert.spv  prep_indirect.comp.spv
src/: main.cpp  vkcompute.cpp  vkcore.cpp  vkdescriptor.cpp  vkmemory.cpp  vkmodel.cpp  vkpresent.cpp  vkrender.cpp  vkshader.cpp  vktexture.cpp
